[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hashtool"
version = "0.1"
description = "common hash functions"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "advisory-lock @ git+https://github.com/jakeogh/advisory-lock",
    "asserttool @ git+https://github.com/jakeogh/asserttool",
    "attr",
    "attrs",
    "click",
    "click-auto-help @ git+https://github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://github.com/jakeogh/clicktool",
    "eprint @ git+https://github.com/jakeogh/eprint",
    "globalverbose @ git+https://github.com/jakeogh/globalverbose",
    "mptool @ git+https://github.com/jakeogh/mptool",
    "psutil",
    "retry-on-exception @ git+https://github.com/jakeogh/retry-on-exception",
    "run-command @ git+https://github.com/jakeogh/run-command",
    "sh @ git+https://github.com/jakeogh/sh",
    "unmp @ git+https://github.com/jakeogh/unmp",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/hashtool"

[project.scripts]
hashtool = "hashtool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
hashtool = [
    "py.typed",
]
